# knowledge-index

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml
doc/: documentation.md  features.md  mcp-integration.md  ollama-integration.md  progress.md  roadmap.md
docs/: index.html  install.sh
scripts/: demo.cast
src/: error.rs  main.rs
src/cli/: args.rs
src/cli/commands/: add_cmd.rs  add_mcp_cmd.rs  backlinks_cmd.rs  completions_cmd.rs  config_cmd.rs  context_cmd.rs  graph_cmd.rs  health_cmd.rs  index_cmd.rs  list_cmd.rs  mod.rs  rebuild_embeddings_cmd.rs  remove_cmd.rs  search_cmd.rs  self_update_cmd.rs  stats_cmd.rs  sync_cmd.rs  tags_cmd.rs  update_cmd.rs
src/config/: history.rs  mod.rs
src/core/: embedder.rs  indexer.rs  markdown.rs  mod.rs  platform.rs  remote.rs  searcher.rs  vault.rs  watcher.rs
src/db/: mod.rs  schema.rs
src/mcp/: mod.rs  server.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/views/: help.rs  mod.rs  repos.rs  search.rs  welcome.rs
tests/: cli_integration.rs
