[package]
name = "kdex"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "A fast CLI for indexing and searching code repositories and knowledge bases for AI-powered workflows"
authors = ["urbanisierung"]
license = "MIT"
repository = "https://github.com/urbanisierung/kdex"
homepage = "https://github.com/urbanisierung/kdex"
documentation = "https://github.com/urbanisierung/kdex/blob/main/doc/documentation.md"
readme = "README.md"
keywords = ["cli", "search", "index", "knowledge", "ai"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = [
    ".github/",
    "target/",
    "*.db",
]

[[bin]]
name = "kdex"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }

# Embeddings (Vector Search)
fastembed = "5"

# Git operations
git2 = "0.20"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# File processing
ignore = "0.4"
blake3 = "1"
notify = { version = "7", features = ["macos_fsevent"] }

# MCP Protocol
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4"
indicatif = "0.17"
atty = "0.2"
url = "2"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
